0506号原型更新!上门服务时间片,用户信息提取到界面选择的上边!

--- a/CommodityDetails.html
+++ b/CommodityDetails.html
@@ -61,18 +61,24 @@
 			</div>
 			<div class="e_d_h_right">
 				<span class="e_d_h_title">时间差多少长时间地产将度搜你成绩单上</span>
-				<p class="e_d_h_title_fu">地降低偶尔为降低接我基地将额外ID今晚IE的加我</p>
+				<p class="e_d_h_title_fu" style="margin-top: 10px;margin-bottom: 10px">地降低偶尔为降低接我基地将额外ID今晚IE的加我</p>
 				<div class="e_d_h_right_div">
 					<span style="line-height: 25px;">销售公司：</span>
 					<span style="display: inline-block; line-height: 25px;margin-left: 12px;">服务公司名称服务公司名称服务公司名称</span><br />
 					<span style="line-height: 25px; float: left;">服务承诺：</span>
 					<div style="float: left;">
-						<img style="display: inline-block; float:left; margin: 8px 6px 0 18px;" src="img/x_duigou.png" />
-						<span style="display: inline-block; color: #666666; float:left; margin-top: 4px;">假一赔十</span><br />
-						<img style="display: inline-block; float:left;  margin: 8px 6px 0 18px;" src="img/x_duigou.png" />
-						<span style="display: inline-block; float:left; color: #666666; margin-top: 4px;">假一赔十</span><br />
-						<img style="display: inline-block; float:left; margin: 8px 6px 0 18px;" src="img/x_duigou.png" />
-						<span style="display: inline-block; float:left; color: #666666; margin-top: 4px;">假一赔十</span>
+						<div class="clearfix">
+							<img style="display: inline-block; float:left; margin: 6px 6px 0 18px;" src="img/x_duigou.png" />
+							<span style="display: inline-block; color: #666666; float:left; margin-top: 4px;">假一赔十</span>
+						</div>
+						<div class="clearfix" style="margin-top: 6px">
+							<img style="display: inline-block; float:left; margin: 6px 6px 0 18px;" src="img/x_duigou.png" />
+							<span style="display: inline-block; color: #666666; float:left; margin-top: 4px;">假一赔十</span>
+						</div>
+						<div class="clearfix" style="margin-top: 6px">
+							<img style="display: inline-block; float:left; margin: 6px 6px 0 18px;" src="img/x_duigou.png" />
+							<span style="display: inline-block; color: #666666; float:left; margin-top: 4px;">假一赔十</span>
+						</div>
 					</div>
 					<div style="margin-top: 75px;">
 						<span style="line-height: 25px; clear: both;">促销活动：</span>
@@ -143,17 +149,17 @@
 							<tbody>
 								<tr>
 									<td style="width: 20%;  background-color: #F7F7F7;">安装对应服务项目</td>
-									<td>正常</td>
+									<td style="padding-left: 30px;text-align: left">正常</td>
 
 								</tr>
 								<tr>
 									<td style="width: 20%;  background-color: #F7F7F7;">服务公司</td>
-									<td>正常</td>
+									<td style="padding-left: 30px;text-align: left">正常</td>
 
 								</tr>
 								<tr>
 									<td style="width: 20%; background-color: #F7F7F7;">安装条件要求</td>
-									<td>正常</td>
+									<td style="padding-left: 30px;text-align: left">正常</td>
 
 								</tr>
 
@@ -171,27 +177,27 @@
 
 							<tbody>
 								<tr>
-									<td style="width: 15%;  background-color: #F7F7F7;">商品编码</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">商品编码</td>
 									<td>正常</td>
-									<td style="width: 15%;  background-color: #F7F7F7;">商品分类</td>
-									<td>正常</td>
-								</tr>
-								<tr>
-									<td style="width: 15%;  background-color: #F7F7F7;">保质期</td>
-									<td>正常</td>
-									<td style="width: 15%;  background-color: #F7F7F7;">单位</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">商品分类</td>
 									<td>正常</td>
 								</tr>
 								<tr>
-									<td style="width: 15%; background-color: #F7F7F7;">品牌</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">保质期</td>
 									<td>正常</td>
-									<td style="width: 15%;  background-color: #F7F7F7;">产地</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">单位</td>
 									<td>正常</td>
 								</tr>
 								<tr>
-									<td style="width: 15%; background-color: #F7F7F7;">材质</td>
+									<td style="width: 20%; background-color: #F7F7F7;">品牌</td>
 									<td>正常</td>
-									<td style="width: 15%;  background-color: #F7F7F7;">型号</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">产地</td>
+									<td>正常</td>
+								</tr>
+								<tr>
+									<td style="width: 20%; background-color: #F7F7F7;">材质</td>
+									<td>正常</td>
+									<td style="width: 20%;  background-color: #F7F7F7;">型号</td>
 									<td>正常</td>
 								</tr>
 								<tr>
@@ -226,7 +232,7 @@
 			<div class="bot_content">
 				<span class="bot_content_t">商品图文信息</span>
 				<div class="img_content_x">
-					<img src="img/bg_logo.png" />
+					<img src="img/bg_logo.png" style="width:100%;"/>
 				</div>
 			</div>	
 		</div>
