--- a/complaint.html
+++ b/complaint.html
@@ -140,6 +140,10 @@
                     <span class="gayColor">&nbsp;&nbsp;17979789217982179</span>
                 </div>
 
+                <div class="z_line" style="margin-top: 15px">
+                    <span>( 所属的燃气企业为 10001-廊坊燃气公司 )</span>
+                </div>
+
                 <div class="z_lable">
                     <button>营业厅</button>
                     <button>卡证</button>
@@ -197,6 +201,8 @@
                             </div> 
                         </div>
                     </div>
+
+
                 </div>
 
 
