--- a/flow.html
+++ b/flow.html
@@ -434,31 +434,39 @@
 <div id="cityChoiceRadio" style="display: none;" class="layui-form">
 	<div class="e_common_SPAN_div">
 		<span class="e_common_SPAN_COLOR">H</span>
-		<input type="radio" name="e_city" value="湖州" title="湖州">
+        <div class="clearfix" style="padding-left: 20px">
+		    <input type="radio" name="e_city" value="湖州" title="湖州">
+        </div>
 	</div>
 	<div class="e_common_SPAN_div">
 		<span class="e_common_SPAN_COLOR">L</span>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
+		<div class="clearfix" style="padding-left: 20px">
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+        </div>
 	</div>
 	<div class="e_common_SPAN_div">
 		<span class="e_common_SPAN_COLOR">Y</span>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
+		<div class="clearfix" style="padding-left: 20px">
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+            <input name="e_city" class="e_city_inp" type="radio"/>
+        </div>
 	</div>
 	<div class="e_common_SPAN_div">
 		<span class="e_common_SPAN_COLOR">R</span>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
-		<input name="e_city" class="e_city_inp" type="radio"/>
+        <div class="clearfix" style="padding-left: 20px">
+		    <input name="e_city" class="e_city_inp" type="radio"/>
+		    <input name="e_city" class="e_city_inp" type="radio"/>
+		    <input name="e_city" class="e_city_inp" type="radio"/>
+        </div>
 	</div>
 </div>
 
