--- a/index.html
+++ b/index.html
@@ -99,8 +99,15 @@
 		</div>
 	</header>
 
+	<div class="z_wb_title" style="padding-left: 10px;height: 40px;line-height: 40px;background-color: transparent;">
+
+		<span>主叫号码:</span><span>&nbsp;&nbsp;15011546520</span><span style="margin-left: 15px">归属地:</span>
+		<span>&nbsp;&nbsp;北京市北京市</span><span style="margin-left: 15px">渠道:</span><span>&nbsp;&nbsp;新奥燃气</span>
+		<span style="margin-left: 15px">列队:</span><span>&nbsp;&nbsp;新_新奥</span>
+	</div>
+
 	<div style="margin: 0;" class="layui-tab admin-nav-card layui-tab-brief" lay-filter="admin-nav-card" >
-		<ul class="layui-tab-title">
+		<ul class="layui-tab-title" style="border-bottom: none">
 			<li lay-id="index" class="layui-this" >首页</li>
 			<li lay-id="callworking">呼叫工作台</li>
 		</ul>
