更改多选按钮

--- a/BGO_preview.html
+++ b/BGO_preview.html
@@ -216,6 +216,7 @@
 		//多选处理
 		$(".vit_content_left_title[question_id='"+jump+"'] .layui-form-checkbox").addClass("layui-checkbox-disbaled layui-disabled");
 		$(".vit_content_left_title[question_id='"+jump+"'] :checkbox").attr("disabled","disabled");
+		$(".vit_content_left_title[question_id='"+jump+"'] .layui-form-checkbox").removeClass("layui-form-checked");
 		//文本框处理
 		$(".vit_content_left_title[question_id='"+jump+"'] :text").attr("disabled","disabled");
 		//处理填写数据
